apps/ats/base/redis-kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: dev
  labels:
   app: redis
   environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      environment: dev
  template:
    metadata:
      labels:
        app: redis
        environment: dev
    spec:
      containers:
      - name: redis
        image: redis:4.0.14-alpine3.11
        ports:
        - containerPort: 6379
        resources:
          limits:
            memory: 512Mi
            cpu: "2"
          requests:
            memory: 256Mi
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: dev
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
  type: LoadBalancer
